# Braz

./: .gitignore  mkdocs.yml  pyproject.toml
braz/: constantes.py
braz/gerar/: cnpj.py  cns.py  cpf.py  pis_pasep.py  rg.py  titulo_eleitor.py
braz/validar/: cnpj.py  cns.py  cpf.py  rg.py  titulo_eleitor.py
docs/: index.md
