[tool.poetry]
name = "braz"
version = "0.1.0"
description = ""
authors = ["Miguel Alves Cordeiro Braz <dev.macb@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
mkdocs-material = "^9.5.25"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.25"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules" 


[tool.isort]
profile = "black"
line_length = 79


[tool.taskipy.tasks]
docs = "mkdocs serve"
post_test = "coverage html"
test = "task lint && pytest -s -x --cov=braz -vv"
lint = "blue --check --diff . && isort --check --diff ."